# jsonforge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PROGRESS.md  README.md  pyproject.toml
.github/workflows/: tests.yml
jsonforge/: __init__.py  cli.py
jsonforge/core/: __init__.py  casting.py  document.py  embedded_json.py  paths.py  search.py  strict_json.py
jsonforge/tui/: __init__.py  app.py  prompts.py  render.py
tests/: test_casting.py  test_cli.py  test_document.py  test_embedded_json.py  test_paths.py  test_prompts.py  test_render.py  test_search.py  test_stress_fixture.py  test_tui.py
tests/fixtures/: sample.json
